<resources>
    <string name="app_name" translatable="false">buggy note 2</string>
    <string name="action_settings">Settings</string>
    <string name="nothing_here">Nothing here</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_tags">Tags</string>
    <string name="item_view">Item view</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="exist_tag">The tag was existed</string>
    <string name="last_edit">Last edited: %1$s</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="remove">Remove</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="undo">Undo</string>
    <string name="moved_to_archive">Moved to Archive</string>
    <string name="format_bold">Format Bold</string>
    <string name="format_italic">Format italic</string>
    <string name="text_alignment">Text Alignment</string>
    <string name="set_font_type">Set font type</string>
    <string name="appearance">Appearance</string>
    <string name="show_note_list_as">Show note list as</string>
    <string name="note_list_view_type_key" translatable="false">note_list_view_type_key</string>
    <string name="remove_from_device">Remove from device</string>
    <string name="remove_confirmation">Do you really want to delete this?</string>
    <string name="pinned">Pinned</string>
    <string name="others">Others</string>
    <string name="action_pin">Pin the note</string>
    <string name="pin_selected_notes">Pin selected notes</string>
    <string name="unpin_selected_notes">Unpin selected notes</string>
    <string name="move_to_archive">Move to archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="unarchived_moved_to_note_list">Unarchived</string>
    <string name="archive">Archive</string>
    <string name="settings">Settings</string>
    <string name="remove_tag_dialog_title">Remove Tag?</string>
    <string name="remove_tag_dialog_content">Your notes won\'t be removed when delete this tag.</string>
    <string name="trash_can_description">Your notes will be permanently removed after 30 days in Trash.</string>
    <string name="removing_date_warining">Your notes will be permanently removed on %1$s</string>
    <string name="restore">Restore</string>
    <string name="trash">Trash</string>
    <string name="set_note_color">Set note color</string>
    <string name="restore_status">Note has been move to recycle bin</string>
    <string name="share">Share</string>
    <string name="add_a_check_list_item">Add a checklist item</string>
    <string name="dot_dot_dot">…</string>
    <string name="preview">Preview</string>
    <string name="editor">Editor</string>
    <string name="add_new_notification">Add new notification</string>
    <string name="action_add_photo">Add photo</string>
    <string name="choose_an_item">Choose an item</string>
    <string name="share_to">Share to:</string>
    <string name="share_note">Share note</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="add_sound">Add sound</string>
    <string name="pick_color">Pick a color</string>
    <string name="app_theme_key" translatable="false">app_theme_key</string>
    <string name="theme_title">Theme</string>
    <string name="app_color_key" translatable="false">app_color_key</string>
    <string name="color_title">Color</string>
    <string name="detail">Detail</string>
    <string name="invalid_reminder_time">Invalid reminder time</string>
    <string name="existed_notification_dialog_title">Notification is existed</string>
    <string name="existed_notification_dialog_msg">This note have notification at %1$s. Do you want override?</string>
    <string name="dialog_tag_filter_preview_title">Filter result</string>
    <string name="advanced">Advanced</string>
    <string name="preference_backup_summary">Save your notes into a file</string>
    <string name="preference_backup">Backup</string>
    <string name="preference_import_summary">Import your notes from a backup file</string>
    <string name="preference_import">Import</string>
    <string name="preference_backup_key" translatable="false">preference_backup_key</string>
    <string name="preference_import_key" translatable="false">preference_import_key</string>
    <string name="Saved">Saved</string>
    <string name="import_failed">No notes found from the file</string>
    <string name="import_note_dialog_title">Import notes</string>
    <string name="import_note_dialog_msg">Number of notes found from the file: %1$d</string>
    <string name="import_notes_dialog_positive">Import</string>
    <string name="import_note_dialog_succeed">Imported</string>
    <string name="load_audio_unsuccess">Load audio unsuccessful</string>
    <string name="delete">Delete</string>
    <string name="delete_reminder_opt">Delete this reminder</string>
    <string name="delete_reminder_msg">Do you really want to delete this reminder?</string>
    <string name="deleted">Deleted</string>
    <string name="intro_title">Get started</string>
    <string name="title_intro1">Hi there!</string>
    <string name="description_intro1">Welcome to Notto, a simple light-weight note editor for Android.</string>
    <string name="description_intro2">\"You can create quick text 📝, a check list  📋 or fancy ✨ Markdown \"</string>
    <string name="title_intro2">Support various types of notes</string>
    <string name="title_intro3">Backup &amp; Restore your notes</string>
    <string name="first_time_key">first_time_key</string>
    <string name="introduction">Introduction</string>
    <string name="create_plain_text_label">Create note</string>
    <string name="create_markdown_label">Create markdown note</string>
    <string name="create_checklist_label">Create checklist</string>
</resources>