<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance">

        <ListPreference
            android:entries="@array/note_list_view_type_entries"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/show_note_list_as"
            app:defaultValue="0"
            app:entryValues="@array/note_list_view_type_value"
            app:isPreferenceVisible="true"
            app:key="@string/note_list_view_type_key"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_theme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@array/theme_summaries"
            app:defaultValue="0"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/app_theme_key"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/pink_500"
            android:icon="@drawable/ic_outline_color_lens_24"
            android:key="@string/app_color_key"
            android:title="@string/color_title"
            app:colorChoices="@array/color_choices"
            app:colorShape="circle"
            app:numColumns="5"
            app:showDialog="true"
            app:viewSize="large" />
    </PreferenceCategory>

</PreferenceScreen>