<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_add_notification"
        android:icon="@drawable/ic_baseline_add_alert_24"
        android:title="@string/add_new_notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:title="@string/action_pin"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_photo"
        android:icon="@drawable/ic_baseline_add_photo_alternate_24"
        android:title="@string/action_add_photo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_sound"
        android:icon="@drawable/ic_baseline_audiotrack_24"
        android:title="@string/add_sound"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
</menu>