<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.hcmus.clc18se.buggynote2.fragments.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_nav_notes_to_noteDetailsFragment"
            app:destination="@id/navigation_note_details"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out">
            <argument
                android:name="noteId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_tags"
        android:name="com.hcmus.clc18se.buggynote2.fragments.TagsFragment"
        android:label="@string/menu_tags"
        tools:layout="@layout/fragment_tags" />

    <navigation
        android:id="@+id/navigation_note_details"
        app:startDestination="@id/nav_note_details">
        <fragment
            android:id="@+id/nav_note_details"
            android:name="com.hcmus.clc18se.buggynote2.fragments.NoteDetailsFragment"
            android:label=""
            tools:layout="@layout/fragment_note_details">
            <argument
                android:name="noteId"
                app:argType="long" />
            <action
                android:id="@+id/action_nav_note_details_to_tagSelectionFragment"
                app:destination="@id/nav_tag_selection"
                app:enterAnim="@anim/fade_in"
                app:exitAnim="@anim/fade_out"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/fade_out">
                <argument
                    android:name="noteId"
                    app:argType="long" />
            </action>
            <action
                android:id="@+id/action_nav_note_details_to_photoViewFragment"
                app:destination="@id/photoViewFragment"
                app:popUpTo="@id/nav_note_details" />
            <action
                android:id="@+id/action_nav_note_details_to_audioViewFragment"
                app:destination="@id/audioViewFragment"
                app:popUpTo="@id/nav_note_details" />
        </fragment>

        <fragment
            android:id="@+id/nav_tag_selection"
            android:name="com.hcmus.clc18se.buggynote2.fragments.TagSelectionFragment"
            android:label=""
            tools:layout="@layout/fragment_select_tags">
            <argument
                android:name="noteId"
                app:argType="long" />
        </fragment>
        <fragment
            android:id="@+id/photoViewFragment"
            android:name="com.hcmus.clc18se.buggynote2.fragments.PhotoViewFragment"
            android:label="PhotoViewFragment">
            <argument
                android:name="noteId"
                app:argType="long" />
        </fragment>
        <fragment
            android:id="@+id/audioViewFragment"
            android:name="com.hcmus.clc18se.buggynote2.fragments.AudioViewFragment"
            android:label="AudioViewFragment">
            <argument
                android:name="noteId"
                app:argType="long" />
        </fragment>
    </navigation>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hcmus.clc18se.buggynote2.fragments.SettingsFragment"
        android:label="@string/settings" />

    <!--Global action-->
    <action
        android:id="@+id/open_settings_fragment"
        app:destination="@id/nav_settings" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="com.hcmus.clc18se.buggynote2.fragments.ArchivedFragment"
        android:label="@string/archive"
        tools:layout="@layout/fragment_archived">
        <action
            android:id="@+id/action_nav_notes_to_noteDetailsFragment"
            app:destination="@id/navigation_note_details"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out">
            <argument
                android:name="noteId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.hcmus.clc18se.buggynote2.fragments.TrashFragment"
        android:label="@string/trash"
        tools:layout="@layout/fragment_trash">
        <action
            android:id="@+id/action_nav_notes_to_noteDetailsFragment"
            app:destination="@id/navigation_note_details"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out">
            <argument
                android:name="noteId"
                app:argType="long" />
        </action>

    </fragment>

</navigation>