<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="noteViewModel"
            type="com.hcmus.clc18se.buggynote2.viewmodels.NotesViewModel" />

        <variable
            name="tagViewModel"
            type="com.hcmus.clc18se.buggynote2.viewmodels.TagsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSurface"
        tools:context=".fragments.NotesFragment">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar_main" />

        <LinearLayout
            placeholderVisibility="@{noteViewModel.noteList}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{noteViewModel.noteListVisibility}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:visibility="gone">

            <TextView
                android:id="@+id/placeholder_emoticon"
                placeHolderEmoticon="@{null}"
                tools:text="(っ◔◡◔)っ ❤"
                style="@style/placeholder_emoticon" />

            <TextView
                android:text="@string/nothing_here"
                style="@style/placeholder_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tag_filter_list"
                loadFilterTags="@{tagViewModel.tags}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_tag_filter"
                style="@style/tag_filter_list_recycler_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/note_list"
                pinnedNotes="@{noteViewModel.pinnedNotes}"
                unpinnedNotes="@{noteViewModel.unpinnedNotes}"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="2"
                tools:itemCount="3"
                tools:listitem="@layout/item_note"
                style="@style/note_list_recycler_view" />
            <!--                        android:layoutAnimation="@anim/layout_animator"-->
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/grey_900"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/restore_status"
                android:textSize="15dp"
                android:layout_marginLeft="4dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/restore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/restore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/restore"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_baseline_mode_edit_24"
            tools:ignore="ContentDescription" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>